--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,3 +17,10 @@ header img {
 .view {
     display: none !important;
 }
+
+.proje-vurgu {
+    font-weight: 600; 
+    font-size: 1.05em; 
+    color: #159957; 
+    margin-right: 5px;
+}
